--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,12 @@
 pluginGroup = tech.dentest
 pluginName = Dentest
 # SemVer format -> https://semver.org
-pluginVersion = 0.1.3
+pluginVersion = 0.1.4
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 211
+pluginUntilBuild = 231
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IC
