Tree visualisation and feature redirection

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,17 +11,7 @@
     </extensions>
 
     <actions>
-        <group id="Dentest.ToolbarRunGroup">
-            <add-to-group group-id="ToolbarRunGroup" anchor="last" />
-            <action
-                    class="tech.dentest.actions.PullAction"
-                    id="Dentest.Actions.ToolBar.PullAction"
-                    icon="AllIcons.Vcs.Fetch"
-                    text="Dentest Pull"
-            />
-        </group>
-        <group id="Dentest.MainMenu" text="Dentest" description="Manage your Dentest integration">
-            <add-to-group group-id="MainMenu" anchor="before" relative-to-action="HelpMenu" />
+        <group id="Dentest.MainMenu" text="Dentest" description="Manage your Dentest integration" popup="true">
             <action
                     class="tech.dentest.actions.PullAction"
                     id="Dentest.Actions.PullAction"
@@ -29,11 +19,12 @@
                     text="Pull"
             />
             <action
-                class="tech.dentest.actions.ConfigurationAction"
-                id="Dentest.Actions.ConfigurationAction"
-                icon="AllIcons.General.Settings"
-                text="Configuration"
+                    class="tech.dentest.actions.ConfigurationAction"
+                    id="Dentest.Actions.ConfigurationAction"
+                    icon="AllIcons.General.Settings"
+                    text="Configuration"
             />
+            <add-to-group group-id="MainMenu" anchor="before" relative-to-action="HelpMenu" />
         </group>
     </actions>
 </idea-plugin>
